<resources>
    <string name="app_name">SistersLabAkademiUygulamaDersi</string>
    <string name="name">Hamburger</string>
    <string name="price">150 TL</string>
    <string name="info">Açıklama</string>
    <string name="buy_now">Şimdi Satın Al</string>
    <string name="news_name">Oyun Haberleri</string>
    <string name="news_date">14.08.2020</string>
    <string name="read_continue">Devamını oku</string>
    <string name="news_info">Nintendo son yıllarda büyük başarılara imza attı. Özellikle 2019 yılında piyasaya sürdüğü Nintendo Switch konsoluyla büyük bir çıkış yakalamış, bu başarıya ise içerisinde bulunan oyunlar büyük katkı sağlamıştır.</string>
    <string name="student_name">Öğrenci adı</string>
    <string name="student_tc">Öğrenci tc</string>
    <string name="student_password">Şifre</string>
    <string name="login">Giriş</string>
    <string name="error_message">Adını, tc ni ve şifreni doldurduğundan emin olmalısın.</string>
    <string name="lesson_one">Türkçe</string>
    <string name="lesson_one_teacher_name">Ali Kaya</string>
    <string name="lesson_two">İngilizce</string>
    <string name="lesson_two_teacher_name">Yasemin Kılıç</string>
    <string name="lesson_three">Matematik</string>
    <string name="lesson_three_teacher_name">Önder Şahin</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="note_one">Vize Notu</string>
    <string name="note_two">Final Notu</string>
    <string name="average_one">Ortalama</string>
    <string name="lesson_one_score_one">50</string>
    <string name="lesson_one_score_two">80</string>
    <string name="lesson_one_average">65</string>
    <string name="lesson_two_score_one">70</string>
    <string name="lesson_two_score_two">40</string>
    <string name="lesson_two_average">50</string>
    <string name="lesson_three_score_one">65</string>
    <string name="lesson_three_score_two">65</string>
    <string name="lesson_three_average">56</string>


</resources>