<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hafta4.soru2.Ornek2">

    <ImageView
        android:id="@+id/news_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/haber" />

    <TextView
        android:id="@+id/news_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/news_iv"
        android:layout_alignTop="@+id/news_iv"
        android:layout_marginStart="16dp"
        android:text="@string/news_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/news_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/news_iv"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/news_date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/news_info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/news_iv"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:padding="5dp"
        android:text="@string/news_info"
        android:textSize="18sp" />

    <Button
        android:id="@+id/read_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/news_info_tv"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="64dp"
        android:textSize="20sp"
        android:layout_marginStart="64dp"
        android:text="@string/read_continue" />


</RelativeLayout>