<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hafta4.soru3.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/student_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layout_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/lesson_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_one"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/teacher_name1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teacher_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_one_teacher_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lesson_one_note_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note_one"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_one_note_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_one" />


        <TextView
            android:id="@+id/lesson_one_note_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note_two"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_one_average"
            app:layout_constraintStart_toEndOf="@+id/lesson_one_note_one"
            app:layout_constraintTop_toBottomOf="@+id/lesson_one" />

        <TextView
            android:id="@+id/lesson_one_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/average_one"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_one_note_two"
            app:layout_constraintTop_toBottomOf="@+id/teacher_name1" />

        <TextView
            android:id="@+id/lesson_one_score_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/lesson_one_score_one"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_one_note_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_one_note_one" />


        <TextView
            android:id="@+id/lesson_one_score_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_one_score_two"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_one_average"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintStart_toEndOf="@+id/lesson_one_score_one"
            app:layout_constraintTop_toBottomOf="@+id/lesson_one_note_two" />

        <TextView
            android:id="@+id/lesson_one_average_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_one_average"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toEndOf="@+id/lesson_one_score_two"
            app:layout_constraintTop_toBottomOf="@+id/lesson_one_average" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layout_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_one">

        <TextView
            android:id="@+id/lesson_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_two"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/teacher_name2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teacher_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_two_teacher_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_two"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lesson_two_note_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note_one"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_two_note_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_two" />


        <TextView
            android:id="@+id/lesson_two_note_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note_two"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_two_average"
            app:layout_constraintStart_toEndOf="@+id/lesson_two_note_one"
            app:layout_constraintTop_toBottomOf="@+id/lesson_two" />

        <TextView
            android:id="@+id/lesson_two_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/average_one"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_two_note_two"
            app:layout_constraintTop_toBottomOf="@+id/teacher_name2" />

        <TextView
            android:id="@+id/lesson_two_score_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/lesson_two_score_one"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_two_note_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_two_note_one" />


        <TextView
            android:id="@+id/lesson_two_score_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_two_score_two"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_two_average"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintStart_toEndOf="@+id/lesson_two_score_one"
            app:layout_constraintTop_toBottomOf="@+id/lesson_two_note_two" />

        <TextView
            android:id="@+id/lesson_two_average_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_two_average"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toEndOf="@+id/lesson_two_score_two"
            app:layout_constraintTop_toBottomOf="@+id/lesson_two_average" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layout_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_two">

        <TextView
            android:id="@+id/lesson_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_three"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/teacher_name3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teacher_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_three_teacher_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_three"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lesson_three_note_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note_one"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_three_note_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_three" />


        <TextView
            android:id="@+id/lesson_three_note_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note_two"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_three_average"
            app:layout_constraintStart_toEndOf="@+id/lesson_three_note_one"
            app:layout_constraintTop_toBottomOf="@+id/lesson_three" />

        <TextView
            android:id="@+id/lesson_three_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/average_one"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lesson_three_note_two"
            app:layout_constraintTop_toBottomOf="@+id/teacher_name3" />

        <TextView
            android:id="@+id/lesson_three_score_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/lesson_three_score_one"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_three_note_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_three_note_one" />


        <TextView
            android:id="@+id/lesson_three_score_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_three_score_two"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/lesson_three_average"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintStart_toEndOf="@+id/lesson_three_score_one"
            app:layout_constraintTop_toBottomOf="@+id/lesson_three_note_two" />

        <TextView
            android:id="@+id/lesson_three_average_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lesson_three_average"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toEndOf="@+id/lesson_three_score_two"
            app:layout_constraintTop_toBottomOf="@+id/lesson_three_average" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>